--- a/Server2/src/api/config/database.yml
+++ b/Server2/src/api/config/database.yml
@@ -1,7 +1,7 @@
 production:
   adapter: mysql2
   database: IkuraCloud
-  host: 202.247.58.214
+  host: localhost
   pool: 5
   username: root
   password: group1
@@ -10,7 +10,7 @@ production:
 development:
   adapter: mysql2
   database: IkuraCloud
-  host: 202.247.58.214
+  host: localhost
   pool: 5
   username: root
   password: group1
